--- a/mi_pagina_web/portfolio.html
+++ b/mi_pagina_web/portfolio.html
@@ -24,12 +24,12 @@
         
         <tr>
             <td><img src="imagenes/img1.JPG"></td> 
-             <td><img src="imagenes/img2.JPG"></td>  
-             <td><img src="imagenes/img3.JPG"></td>    
+             <td><img src="imagenes/img2.jpg"></td>  
+             <td><img src="imagenes/img3.jpg"></td>    
         </tr>
         <tr>
-             <td><img src="imagenes/img5.JPG"></td>  
-             <td><img src="imagenes/img4.JPG"></td>  
+             <td><img src="imagenes/img5.jpg"></td>  
+             <td><img src="imagenes/img4.jpg"></td>  
              <td><img src="imagenes/img_cover.jpg"></td> 
         </tr>
         </table>
